--- a/package.json
+++ b/package.json
@@ -5,22 +5,27 @@
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "package": "svelte-kit package"
   },
   "devDependencies": {
-    "@sveltejs/kit": "next",
-    "autoprefixer": "^10.4.4",
-    "cssnano": "^5.1.7",
-    "postcss": "^8.4.12",
-    "sass": "^1.50.1",
+    "@sveltejs/adapter-static": "^1.0.0-next.29",
+    "@sveltejs/kit": "^1.0.0-next.320",
+    "eslint": "^8.14.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.47.0",
     "svelte-check": "^2.7.0",
-    "svelte-preprocess": "^4.10.6",
-    "svelte2tsx": "^0.4.14",
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.3"
+    "svelte-language-server": "^0.14.26",
+    "svelte-preprocess": "^4.10.6"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "js-debounce-throttle": "^1.0.1"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "useTabs": true,
+    "semi": false,
+    "singleQuote": false
+  }
 }
