--- a/.build.yml
+++ b/.build.yml
@@ -8,5 +8,9 @@ artifacts:
 tasks:
   - build: |-
       cd tasmospa
-      nix-shell shell.nix --run "npm run build"
+      nix-shell shell.nix --run '
+        npm run build
+        npm i
+      '
+  - artifact: |-
       tar -zcvf ../build.tar.gz ./build/
